# mft-rust

./: .gitignore  Cargo.toml
connectors/: Cargo.toml
connectors/src/: lib.rs  sftp.rs
jobexecutor/: Cargo.toml
models/: Cargo.toml
models/src/: lib.rs
settings/: Cargo.toml
settings/src/: lib.rs
src/: lib.rs  mimetypes.rs  models.rs
src/client/: mod.rs
src/server/: mod.rs
tests/: Cargo.toml  readme.md
tests/configurations/: common.yaml
tests/configurations/sftp-server/: Dockerfile  compose.yaml
tests/configurations/sftp-server/files/: entrypoint.sh
tests/src/: lib.rs  settingstests.rs  sftptests.rs
